--- a/first_shoot.ipynb
+++ b/first_shoot.ipynb
@@ -36,6 +36,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "id": "c19fe036-68a7-407f-ab5f-654bb80b3bb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "category_name\n",
+       "long sleeve dress        7907\n",
+       "long sleeve outwear     13457\n",
+       "long sleeve top         36064\n",
+       "short sleeve dress      17211\n",
+       "short sleeve outwear      543\n",
+       "short sleeve top        71645\n",
+       "shorts                  36616\n",
+       "skirt                   30835\n",
+       "sling                    1985\n",
+       "sling dress              6492\n",
+       "trousers                55387\n",
+       "vest                    16095\n",
+       "vest dress              17949\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby(\"category_name\").size()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "46eb8489-f5c6-4bb3-83b1-c2f4359c445c",
    "metadata": {},
