[ADD] mobile was de best with transfer learning

--- a/first_shoot.ipynb
+++ b/first_shoot.ipynb
@@ -173,7 +173,12 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "15958b2c-c95d-44f2-9c30-ea4204016aa6",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -875,7 +880,9 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "957d22b3-292a-4bb6-a7e2-e1e959ab015f",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
