--- a/second_shoot.ipynb
+++ b/second_shoot.ipynb
@@ -1753,7 +1753,9 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "957d22b3-292a-4bb6-a7e2-e1e959ab015f",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
