--- a/last_validation.ipynb
+++ b/last_validation.ipynb
@@ -1698,6 +1698,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8427943f-be55-46b9-b71b-bf46ba89cc88",
+   "metadata": {},
+   "source": [
+    "# Clothes without accepted category with high probablity"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 64,
    "id": "fbf3858a-418d-4794-91b3-09ac549b6b74",
